deploy/service-bidding.yml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "bidding-v1-0-0-snapshot"
  labels:
    app: bidding
    appNameVersion: "bidding-v1-0-0-snapshot"
    "akka.lightbend.com/service-name": bidding
spec:
  replicas: 2
  selector:
    matchLabels:
      appNameVersion: "bidding-v1-0-0-snapshot"
  template:
    metadata:
      labels:
        app: bidding
        appNameVersion: "bidding-v1-0-0-snapshot"
        "akka.lightbend.com/service-name": bidding
    spec:
      restartPolicy: Always
      containers:
        - name: bidding
          image: "biddingimpl:1.0.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 2552
              name: remoting
            - containerPort: 8558
              name: management
          volumeMounts: []
          command:
          readinessProbe:
            httpGet:
              path: "/ready"
              port: management
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/alive"
              port: management
            periodSeconds: 10
            initialDelaySeconds: 60
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bidding
  name: bidding
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: remoting
      port: 2552
      protocol: TCP
      targetPort: 2552
    - name: management
      port: 8558
      protocol: TCP
      targetPort: 8558
  selector:
    app: bidding
