deploy/service-user.yml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "user-v1-0-0-snapshot"
  labels:
    app: user
    appNameVersion: "user-v1-0-0-snapshot"
    "akka.lightbend.com/service-name": user
spec:
  replicas: 2
  selector:
    matchLabels:
      appNameVersion: "user-v1-0-0-snapshot"
  template:
    metadata:
      labels:
        app: user
        appNameVersion: "user-v1-0-0-snapshot"
        "akka.lightbend.com/service-name": user
    spec:
      restartPolicy: Always
      containers:
        - name: user
          image: "userimpl:1.0.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 2552
              name: remoting
            - containerPort: 8558
              name: management
          volumeMounts: []
          command:
            - "/opt/docker/bin/rp-start"
          args:
            - "bin/userimpl"
          readinessProbe:
            httpGet:
              path: "/platform-tooling/ready"
              port: management
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/platform-tooling/healthy"
              port: management
            periodSeconds: 10
            initialDelaySeconds: 60
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user
  name: user
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: remoting
      port: 2552
      protocol: TCP
      targetPort: 2552
    - name: management
      port: 8558
      protocol: TCP
      targetPort: 8558
  selector:
    app: user
