deploy/web-gateway.yml
---
apiVersion: "apps/v1beta2"
kind: Deployment
metadata:
  name: "webgateway-v1-0-0-snapshot"
  labels:
    app: webgateway
    appNameVersion: "webgateway-v1-0-0-snapshot"
    "akka.lightbend.com/service-name": webgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      appNameVersion: "webgateway-v1-0-0-snapshot"
  template:
    metadata:
      labels:
        app: webgateway
        appNameVersion: "webgateway-v1-0-0-snapshot"
        "akka.lightbend.com/service-name": webgateway
    spec:
      restartPolicy: Always
      containers:
        - name: webgateway
          image: "webgateway:1.0.0-SNAPSHOT"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
          volumeMounts: []
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webgateway
  name: webgateway
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: webgateway
